welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:27: error: Unmatched closing brace '}' ignored here
 }
 ^SlugSnail:29: error: ':' expected but '.' found.
def isFacingTrail(c.Color):Boolean = {
                   ^SlugSnail:46: error: identifier expected but '}' found.
}
^